--- a/css/home.css
+++ b/css/home.css
@@ -442,6 +442,68 @@ footer .social-media a {
   margin: 0em 1em;
 }
 
+.timeline {
+  width: 80vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.timeline .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 250px;
+  background-color: white;
+  margin: 1em;
+  padding: 1.5em;
+  text-align: center;
+  height: 11em;
+  border-radius: 5px;
+  -webkit-box-shadow: 6px 6px 10px 0px rgba(72, 72, 72, 0.2);
+  box-shadow: 6px 6px 10px 0px rgba(72, 72, 72, 0.2);
+}
+
+.timeline .card h3 {
+  font-size: 1em;
+  width: 100%;
+  border-top: 0.5px solid rgba(128, 128, 128, 0.493);
+  border-bottom: 0.5px solid rgba(128, 128, 128, 0.493);
+  margin-bottom: .3em;
+  padding: .3em 0em;
+}
+
+.timeline .card h4 {
+  font-size: .9em;
+  padding: .2em;
+  width: 80%;
+  margin-bottom: .5em;
+}
+
+.timeline .card p {
+  font-weight: 300;
+  font-size: .8em;
+  text-transform: uppercase;
+}
+
 @media (max-width: 940px) {
   .intro {
     width: 100%;
